# embed_resources

./: CMakeLists.txt
tools/: genLookup.py  genResource.py
